--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ textarea {
     --bs-btn-bg: transparent;
     --bs-btn-border-width: 1px;
     --bs-btn-border-color: transparent;
-    --bs-btn-border-radius: 0;
+    --bs-btn-border-radius: 0.375rem;
     --bs-btn-hover-border-color: transparent;
     --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
     --bs-btn-disabled-opacity: 0.65;
@@ -280,13 +280,6 @@ textarea {
     color: var(--bs-btn-focus-color);
 }
 
-.btn-primary:active,
-.btn-primary:hover {
-    transform: translate(-0.25rem, -0.25rem);
-    box-shadow: 0.25rem 0.25rem var(--color-black);
-    z-index: 5;
-}
-
 .btn-secondary {
     --bs-btn-color: var(--color-black);
     --bs-btn-bg: transparent;
@@ -313,6 +306,13 @@ textarea {
     height: 50px;
     padding: 0;
     border-radius: 50%;
+}
+
+.btn-group-sm>.btn,
+.btn-sm {
+    padding: 0.25rem 0.5rem;
+    font-size: .875rem;
+    border-radius: 0.2rem;
 }
 
 .btn-md {
@@ -790,6 +790,17 @@ ul {
     --bs-modal-header-padding: 1.5rem 1.5rem;
     --bs-modal-border-width: 0;
     --bs-modal-border-radius: 0.375rem;
+}
+
+/*------------------------------------------------------------------
+[ Alert ]*/
+
+.alert-black {
+    --bs-alert-bg: #212327;
+    --bs-alert-margin-bottom: 0;
+    --bs-alert-color: #ecf0f1;
+    --bs-alert-border-color: transparent;
+    --bs-alert-border-radius: 0;
 }
 
 /*------------------------------------------------------------------
