--- a/css/style.css
+++ b/css/style.css
@@ -259,20 +259,21 @@ textarea {
 
 .btn-primary {
     --bs-btn-color: var(--color-white);
-    --bs-btn-bg: var(--color-black);
-    --bs-btn-border-color: var(--color-black);
+    --bs-btn-bg: transparent;
+    --bs-btn-border-color: transparent;
     --bs-btn-hover-color: var(--color-white);
     --bs-btn-focus-color: var(--color-white);
-    --bs-btn-hover-bg: var(--color-blue);
-    --bs-btn-hover-border-color: var(--color-blue);
+    --bs-btn-hover-bg: transparent;
+    --bs-btn-hover-border-color: transparent;
     --bs-btn-focus-shadow-rgb: 226, 3, 56;
     --bs-btn-active-color: var(--color-white);
-    --bs-btn-active-bg: var(--color-blue);
-    --bs-btn-active-border-color: var(--color-blue);
+    --bs-btn-active-bg: transparent;
+    --bs-btn-active-border-color: transparent;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: var(--color-white);
     --bs-btn-disabled-bg: var(--color-grey);
     --bs-btn-disabled-border-color: var(--color-grey);
+    background-image: linear-gradient(180deg, #117DFF, #3BC3E1);
     transition: transform .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
@@ -750,6 +751,10 @@ ul {
     --bs-offcanvas-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
+.offcanvas-body {
+    background: 50% 100% / contain no-repeat url("../img/bg-offcanvas.png");
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ FOOTER ]*/
 
@@ -968,6 +973,10 @@ ul {
     .offcanvas-xl,
     .offcanvas-xxl {
         --bs-offcanvas-height: 70vh;
+    }
+
+    .offcanvas-body {
+        background: none;
     }
 
     .navbar-expand-lg .navbar-nav .dropdown-menu {
