--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ textarea {
 
 .form-select {
     background-image: url(../img/dropdown.svg);
-    background-size: 13px 10px;
+    background-size: 16px 10px;
 }
 
 .form-control:focus,
@@ -245,6 +245,29 @@ textarea {
     border-top: 0;
     border-right: 0;
     border-left: 0;
+}
+
+.form-check-input {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-top: 0.25rem;
+    border: 1px solid #545965;
+    background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);
+}
+
+.form-check-input[type=checkbox],
+.form-check-input:checked {
+    border-radius: 0;
+}
+
+.form-check-input:checked[type=checkbox] {
+    background-image: url(../img/checked.svg);
+}
+
+.form-check-input:checked {
+    background-color: transparent;
+    border-color: transparent;
+    background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -876,6 +899,23 @@ ul {
 
 .portfoliSwiper .swiper-slide {
     width: 500px;
+}
+
+.card.card-pricing {
+    --bs-card-bg: rgba(18, 14, 30, 0.2);
+    backdrop-filter: blur(46px);
+}
+
+.modal-mainForm {
+    --bs-modal-border-radius: 0;
+    --bs-modal-color: #fff;
+    --bs-modal-bg: #120E1E;
+}
+
+@media (min-width: 768px) {
+    .modal-md {
+        --bs-modal-width: 600px;
+    }
 }
 
 /*//////////////////////////////////////////////////////////////////
