--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ Version: 1.0
 [ IMPORT FONTS ]*/
 
 @import url('../fonts/pppangramsans/stylesheet.css');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 @import url('../fonts/boxicons/boxicons.min.css');
 
 /*//////////////////////////////////////////////////////////////////
@@ -38,10 +38,12 @@ Version: 1.0
 :root {
     --color-black: #120E1E;
     --color-blue: #46A6F7;
+    --color-deep-blue: #259EF1;
     --color-grey: #838189;
     --color-white: #fff;
     --ff-main: 'PP Pangram Sans', sans-serif;
     --fw-light: 300;
+    --fw-regular: 400;
     --fw-medium: 500;
     --fw-semibold: 600;
     --fw-bold: 700;
@@ -278,7 +280,7 @@ textarea {
     --bs-btn-padding-y: 0.75rem;
     --bs-btn-font-family: 'Open Sans', sans-serif;
     --bs-btn-font-size: 1.25rem;
-    --bs-btn-font-weight: 400;
+    --bs-btn-font-weight: var(--fw-bold);
     --bs-btn-line-height: 1.35;
     --bs-btn-color: var(--color-white);
     --bs-btn-bg: transparent;
@@ -465,6 +467,10 @@ img {
     font-weight: 700;
 }
 
+.fz-12 {
+    font-size: 1rem;
+}
+
 .fz-15 {
     font-size: 1.25rem;
 }
@@ -473,23 +479,39 @@ img {
     font-size: 1.5rem;
 }
 
+.fz-2 {
+    font-size: 1.75rem;
+}
+
 @media (min-width: 992px) {
 
+    .fz-12 {
+        font-size: 1.25rem;
+    }
     .fz-15 {
         font-size: 1.5rem;
     }
     .fz-17 {
         font-size: 1.75rem;
     }
+    .fz-2 {
+        font-size: 2rem;
+    }
 }
 
 @media (min-width: 2560px) {
 
+    .fz-12 {
+        font-size: 2.5rem;
+    }
     .fz-15 {
         font-size: 3.5rem;
     }
     .fz-17 {
         font-size: 3.75rem;
+    }
+    .fz-2 {
+        font-size: 4rem;
     }
 }
 
@@ -507,6 +529,10 @@ img {
     color: var(--color-blue);
 }
 
+.color-deep-blue {
+    color: var(--color-deep-blue);
+}
+
 .color-grey {
     color: var(--color-grey);
 }
@@ -521,6 +547,10 @@ img {
 
 .color-blue-hover:hover {
     color: var(--color-blue);
+}
+
+.color-deep-blue-hover:hover {
+    color: var(--color-deep-blue);
 }
 
 .color-grey-hover:hover {
@@ -794,9 +824,9 @@ img {
 [ Modal ]*/
 
 .modal {
-    --bs-modal-padding: 1.5rem;
+    --bs-modal-padding: 0 1.5rem 2.5rem;
     --bs-modal-header-border-width: 0;
-    --bs-modal-header-padding: 1.5rem 1.5rem;
+    --bs-modal-header-padding: 1.5rem 1.5rem 0;
     --bs-modal-border-width: 0;
     --bs-modal-border-radius: 0.375rem;
 }
@@ -846,6 +876,7 @@ img {
 .btn-hero {
     --si-btn-hero-size: 10rem;
     --si-btn-hero-font-size: 1.25rem;
+    --bs-btn-font-weight: var(--fw-regular);
     --bs-btn-border-width: 10px;
     --bs-btn-border-color: #fff;
     --bs-btn-hover-border-color: #fff;
@@ -914,7 +945,12 @@ img {
 
 .card.card-pricing {
     --bs-card-bg: rgba(18, 14, 30, 0.2);
+    --bs-card-cap-bg: transparent;
     backdrop-filter: blur(46px);
+}
+
+.card.card-pricing .text-muted {
+    color: #F5F6F7 !important;
 }
 
 .cta {
@@ -951,19 +987,10 @@ img {
     margin-left: 0;
 }
 
-.modal {
-    --bs-modal-padding: 0 3.5rem 2.5rem;
-    --bs-modal-header-padding: 1.5rem 1.5rem 0;
-}
-
 .modal-mainForm {
     --bs-modal-border-radius: 0;
     --bs-modal-color: #fff;
     --bs-modal-bg: #120E1E;
-}
-
-.modal-mainForm .modal-body {
-    min-height: 520px;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -998,6 +1025,9 @@ img-comparison-slider {
 
 @media (min-width: 768px) {
 
+    .modal {
+        --bs-modal-padding: 0 3.5rem 2.5rem;
+    }
     .modal-md {
         --bs-modal-width: 600px;
     }
