--- a/css/style.css
+++ b/css/style.css
@@ -226,27 +226,24 @@ textarea {
 .form-control,
 .form-select {
     font-size: 1.125rem;
-    color: #495057;
+    color: #fff;
+    border-color: #353840;
     border-radius: 0;
+    background-color: #201d27;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.form-control:focus,
+.form-select:focus {
+    color: #fff;
+    border-color: #4f545f;
+    background-color: #201d27;
+    box-shadow: none;
 }
 
 .form-select {
     background-image: url(../img/dropdown.svg);
     background-size: 16px 10px;
-}
-
-.form-control:focus,
-.form-select:focus {
-    border-color: var(--color-black);
-    box-shadow: none;
-}
-
-.form-contact .form-control,
-.form-contact .form-select {
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
 }
 
 .form-check-input {
@@ -262,14 +259,18 @@ textarea {
     border-radius: 0;
 }
 
+.form-check-input:checked {
+    background-color: #201d27;
+    border-color: #353840;
+}
+
 .form-check-input:checked[type=checkbox] {
     background-image: url(../img/checked.svg);
 }
 
-.form-check-input:checked {
-    background-color: transparent;
-    border-color: transparent;
-    background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);
+.form-check-input:focus {
+    border-color: #4f545f;
+    box-shadow: none;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -681,7 +682,7 @@ img {
 .navbar-nav {
     --bs-nav-link-padding-x: 0;
     --bs-nav-link-padding-y: 0.5rem;
-    --bs-nav-link-font-size: 1.25rem;
+    --bs-nav-link-font-size: 1.75rem;
     --bs-nav-link-font-weight: var(--fw-medium);
 }
 
@@ -829,6 +830,10 @@ img {
     --bs-modal-header-padding: 1.5rem 1.5rem 0;
     --bs-modal-border-width: 0;
     --bs-modal-border-radius: 0.375rem;
+}
+
+.btn-close:focus {
+    box-shadow: none;
 }
 
 /*------------------------------------------------------------------
@@ -1037,6 +1042,10 @@ img-comparison-slider {
 
     .offcanvas-body {
         background: none;
+    }
+
+    .navbar-nav {
+        --bs-nav-link-font-size: 1rem;
     }
 
     .navbar-expand-lg .navbar-nav .dropdown-menu {
