--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,7 @@ img {
     width: 100%;
     height: 2px;
     background: rgb(46,173,235);
-    background: radial-gradient(circle, rgba(46,173,235,1) 0%, rgba(0,0,0,.5) 100%);
+    background: radial-gradient(circle, rgba(46,173,235,1) 0%, rgba(0,0,0,.95) 100%);
 }
 
 .footer .nav {
@@ -904,7 +904,7 @@ img {
 [ MAIN CONTENT ]*/
 
 .main {
-    padding: 3rem 0 3rem;
+    padding: 3rem 0 0;
 }
 
 .dark-mode {
@@ -1080,6 +1080,7 @@ img-comparison-slider {
     --bs-card-spacer-x: 0;
     --bs-card-border-radius: 0;
     --bs-card-inner-border-radius: 0;
+    --bs-card-bg: var(--color-black);
 }
 
 
